kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-website
  namespace: ug
  labels:
    run: devops-website
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: devops-website
